fix nav links spacing + target blank on archives

--- a/assets/sass/partials/_home.scss
+++ b/assets/sass/partials/_home.scss
@@ -97,6 +97,7 @@ $bp-cover : 1363px;
     img {
         box-shadow: 0px 0px 20px -10px #000;
         max-width:430px;
+        width:100%;
     }
     
     @media screen and (min-width:$bp-l) {
